fix(ui): adjust various web console icons alignment

--- a/stackgres-k8s/src/admin-ui/public/assets/css/style.css
+++ b/stackgres-k8s/src/admin-ui/public/assets/css/style.css
@@ -3023,6 +3023,7 @@ th.actions, td.actions {
 td.actions a {
     margin: 0 5px;
     cursor: pointer;
+    top: 0;
 }
 
 .actions svg path {
